<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar_action_detail" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
                android:id="@+id/labelFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/labelFirstName" />

        <TextView
                android:id="@+id/labelLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_last_name"
                app:layout_constraintTop_toBottomOf="@id/firstName" />

        <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/labelLastName" />

        <TextView
                android:id="@+id/labelAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_age"
                app:layout_constraintTop_toBottomOf="@id/lastName" />

        <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintTop_toBottomOf="@id/labelAge" />

        <TextView
                android:id="@+id/labelPhotoUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_photo_url"
                app:layout_constraintTop_toBottomOf="@id/age" />

        <EditText
                android:id="@+id/photoUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri|textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/labelPhotoUrl" />

        <Button
                android:id="@+id/addContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_add_contact"
                app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>