<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <TextView
                android:id="@+id/labelFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelFirstName" />

        <TextView
                android:id="@+id/labelLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_last_name"
                app:layout_constraintTop_toBottomOf="@id/firstName" />

        <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelLastName" />

        <TextView
                android:id="@+id/labelAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_age"
                app:layout_constraintTop_toBottomOf="@id/lastName" />

        <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/labelAge" />

        <TextView
                android:id="@+id/labelPhotoUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_photo_url"
                app:layout_constraintTop_toBottomOf="@id/age" />

        <EditText
                android:id="@+id/photoUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                app:layout_constraintTop_toBottomOf="@id/labelPhotoUrl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>